# loupe

./: .dockerignore  .gitignore  ARCH.md  Cargo.toml  README.md
.github/workflows/: ci.yml
contrib/: config.toml  deploy-server.sh  deploy-worker.sh  loupe-server-runtime-secrets.sh  loupe-server.service  loupe-worker-runtime-secrets.sh  loupe-worker.service  worker-config.toml
contrib/docker/: Dockerfile  README.md  bootstrap-debian-host.sh  build-images.sh  deploy-server.sh  deploy-worker.sh  loupe-container-entrypoint.sh  loupe-server-container.service  loupe-worker-container.service  run-server-container.sh  run-worker-container.sh
crates/loupe-cli/: Cargo.toml
crates/loupe-cli/src/: main.rs  render.rs
crates/loupe-core/: Cargo.toml
crates/loupe-core/src/: error.rs  finding.rs  finding_state.rs  job.rs  lib.rs  repo.rs  severity.rs  verdict.rs
crates/loupe-proto/src/: findings_admin.rs  job_io.rs  lease.rs  lib.rs  registry.rs
crates/loupe-server/: Cargo.toml
crates/loupe-server/src/: auth.rs  background.rs  config.rs  init.rs  lib.rs  main.rs  router.rs  state.rs
crates/loupe-server/src/reporters/: email.rs  github.rs  mod.rs
crates/loupe-server/src/routes/: findings_admin.rs  jobs.rs  mod.rs  repos.rs  whoami.rs  workers.rs
crates/loupe-server/tests/: approval_flow.rs  auth_routes.rs  dispatch.rs  email_dispatch.rs  health.rs  jobs.rs  llm_dispatch.rs  repos.rs  verify_flow.rs
crates/loupe-server/tests/common/: mod.rs
crates/loupe-storage/: Cargo.toml
crates/loupe-storage/src/: db.rs  findings.rs  jobs.rs  lib.rs  migrations.rs  repos.rs  secrets.rs  workers.rs
crates/loupe-tls/: Cargo.toml
crates/loupe-tls/src/: ca.rs  config.rs  fingerprint.rs  lib.rs  provider.rs
crates/loupe-tls/tests/: handshake.rs
crates/loupe-worker/: Cargo.toml
crates/loupe-worker/src/: client.rs  config.rs  fingerprint.rs  lib.rs  main.rs  mcp.rs  repo_cache.rs  runner.rs  sandbox.rs  scanner.rs  source_discovery.rs
crates/loupe-worker/src/llm/: claude_cli.rs  codex_cli.rs  mcp.rs  mod.rs  prompts.rs
crates/loupe-worker/src/scanners/: llm_code_review.rs  llm_verifier.rs  mod.rs  regex_secrets.rs
crates/loupe-worker/tests/: end_to_end.rs
