[workspace]
resolver = "2"
members = ["crates/loupe-core", "crates/loupe-proto", "crates/loupe-storage", "crates/loupe-tls"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tnull/loupe"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time"] }
tokio-rustls = "0.26"
