[workspace]
resolver = "2"
members = [
    "crates/loupe-cli",
    "crates/loupe-core",
    "crates/loupe-proto",
    "crates/loupe-server",
    "crates/loupe-storage",
    "crates/loupe-tls",
    "crates/loupe-worker",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tnull/loupe"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "service", "server"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json"] }
tokio-util = { version = "0.7", features = ["rt"] }
git2 = { version = "0.20", default-features = false, features = ["https"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time", "signal"] }
tokio-rustls = "0.26"
tower = "0.5"
rand_core = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
