[workspace]
resolver = "2"
members = [
    "crates/loupe-cli",
    "crates/loupe-core",
    "crates/loupe-proto",
    "crates/loupe-server",
    "crates/loupe-storage",
    "crates/loupe-tls",
    "crates/loupe-worker",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tnull/loupe"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# Every dep below sets `default-features = false` and lists exactly the
# features we use. Two reasons: it documents our usage so a future
# tightener can verify nothing's unused, and it keeps the dep tree
# small (most notably: keeps `aws-lc-rs` out of the rustls subtree —
# default rustls pulls both ring AND aws-lc-rs, the latter is a
# vendored LibCrypto fork worth tens of MB of build artefacts).
anyhow = { version = "1", default-features = false, features = ["std"] }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "matched-path", "query", "tokio", "tracing"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
blake3 = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "env", "help", "usage", "error-context"] }
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "service", "server"] }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
# `rustls-tls-webpki-roots` gives reqwest a compiled-in Mozilla root
# store (via the `webpki-roots` crate) so the GitHub reporter can talk
# to api.github.com without depending on the host's `ca-certificates`
# package. mTLS callers (worker→server, admin→server) still pin the
# private loupe CA via `add_root_certificate`; webpki-roots are
# additive and harmless on those paths since the loupe server cert
# does not chain to a public root. Crypto provider is `ring`, pulled
# in explicitly via the `rustls` workspace dep below; `aws-lc-rs` is
# excluded.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
git2 = { version = "0.20", default-features = false, features = ["https"] }
glob = { version = "0.3", default-features = false }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring", "pem", "x509-parser"] }
rusqlite = { version = "0.32", default-features = false, features = ["bundled-sqlcipher-vendored-openssl"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"] }
rustls-pemfile = { version = "2", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
tempfile = { version = "3", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time", "signal", "process"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring", "logging"] }
tower = { version = "0.5", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter", "json", "tracing-log"] }
walkdir = { version = "2", default-features = false }
