[package]
name = "loupe-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "loupectl — admin CLI for loupe-server."
publish = false

[[bin]]
name = "loupectl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
loupe-proto = { path = "../loupe-proto" }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
