[package]
name = "loupe-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "loupe job-queue daemon: registers repos, schedules scans, dispatches reports."
publish = false

[[bin]]
name = "loupe-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
clap = { workspace = true }
loupe-core = { path = "../loupe-core" }
loupe-proto = { path = "../loupe-proto" }
loupe-storage = { path = "../loupe-storage" }
loupe-tls = { path = "../loupe-tls" }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
loupe-tls = { path = "../loupe-tls" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json"] }
tempfile = { workspace = true }

[lints]
workspace = true
