[package]
name = "loupe-server"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "loupe job-queue daemon: registers repos, schedules scans, dispatches reports."
publish = false

[[bin]]
name = "loupe-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
loupe-core = { path = "../loupe-core" }
loupe-proto = { path = "../loupe-proto" }
loupe-storage = { path = "../loupe-storage" }
loupe-tls = { path = "../loupe-tls" }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
git2 = { workspace = true }
loupe-tls = { path = "../loupe-tls" }
loupe-worker = { path = "../loupe-worker" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json"] }
tempfile = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
