[package]
name = "loupe-storage"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQLite storage layer for loupe — schema, migrations, and DAOs."
publish = false

[dependencies]
anyhow = { workspace = true }
chacha20poly1305 = { workspace = true }
loupe-core = { path = "../loupe-core" }
rand_core = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
