[package]
name = "loupe-tls"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "rustls helpers for loupe: in-memory CA, mTLS server/client config builders, cert fingerprinting."
publish = false

[dependencies]
anyhow = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }

[lints]
workspace = true
