[package]
name = "loupe-worker"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "loupe scan/verify worker — leases jobs, clones repos, runs scanners, reports findings."
publish = false

[[bin]]
name = "loupe-worker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
git2 = { workspace = true }
glob = { workspace = true }
loupe-core = { path = "../loupe-core" }
loupe-proto = { path = "../loupe-proto" }
loupe-tls = { path = "../loupe-tls" }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
loupe-server = { path = "../loupe-server" }
loupe-storage = { path = "../loupe-storage" }
tempfile = { workspace = true }

[lints]
workspace = true
